# BUFR

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release-dump.yml
bufr-dump/: Cargo.toml  README.md
bufr-dump/src/: main.rs
bufr-lib/: Cargo.toml
bufr-lib/src/: error.rs  identification.rs  lib.rs  tables.rs
bufr-lib/tables/: glider.csv
bufr-lib/tests/: test_parse.rs
src/: lib.rs
tests/: test_parse.rs
