[package]
name = "bufr"
version = "0.1.0"
authors = ["castelao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader="0.3"
csv="1.1"
thiserror = "1.0"
getset = "0.1.1"
serde = { version = "1.0.125", features = ["derive"] }
